--- a/package.json
+++ b/package.json
@@ -1,5 +1,37 @@
 {
   "devDependencies": {
-    "prettier": "2.7.1"
-  }
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.3",
+    "autoprefixer": "^10.4.5",
+    "babel-loader": "^8.2.5",
+    "clean-webpack-plugin": "^4.0.0",
+    "core-js": "^3.25.5",
+    "css-loader": "^6.7.1",
+    "cssnano": "^5.1.13",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "postcss-loader": "^7.0.1",
+    "prettier": "2.7.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
+  },
+  "name": "yandex_praktikum",
+  "description": "Проект место.",
+  "version": "0.0.1",
+  "main": "index.js",
+  "scripts": {
+    "build": "webpack --mode production",
+    "dev": "webpack serve"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Chijik666/mesto.git"
+  },
+  "author": "Andrei Salnikov",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Chijik666/mesto/issues"
+  },
+  "homepage": "https://github.com/Chijik666/mesto#readme"
 }
