--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "core-js": "^3.25.5",
     "css-loader": "^6.7.1",
     "cssnano": "^5.1.13",
+    "gh-pages": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss-loader": "^7.0.1",
@@ -21,6 +22,8 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "webpack --mode production",
     "dev": "webpack serve"
   },
